# db-sync

./: .gitignore  CMakeLists.txt  README.md
cmake/: MakeVersion.cmake  main.h
etc/: db-sync-log.xml
include/: db.h  keys.h  main.h  operation.h  utils.hxx  version.h
src/: db.cpp  keys.cpp  main.cpp  operation.cpp  utils.cpp  version.cpp.in
test/: test-data.sql
